<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/judul_menu_utama"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonMulaiDiagnosa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="7dp"
        android:drawableLeft="@drawable/bubble_icon_24"
        android:onClick="openMulaiDiagnosa"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:text="@string/tombol_mulai_diagnosa" />

    <Button
        android:id="@+id/buttonLangsungTherapy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="7dp"
        android:drawableLeft="@drawable/heart_icon_24"
        android:onClick="openLangsungTherapy"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:text="@string/tombol_langsung_therapi" />

    <Button
        android:id="@+id/buttonRiwayatTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="7dp"
        android:drawableLeft="@drawable/stats_icon_24"
        android:onClick="openRiwayat"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:text="@string/tombol_riwayat_timer" />
</LinearLayout>